--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ node_modules/
 
 # Hardhat coverage reports
 /coverage
+
+# Environment Variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
